--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,16 +1,11 @@
-main img{
-width: 150px;
-height: auto;
-border: 1px solid slateblue;
-padding: 2px;
-box-shadow: 0 0 30px gray;
-
-}
 
 nav a{
     color: white;
-    padding: 10px;
+    padding: 0.5rem;
     display: block;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
 }
 aside {
 width:20em;
@@ -26,24 +21,46 @@ width: 200px;
 height: auto;
 
 }
-footer{
-margin-top: 1em;
-border-top: 1px solid black;
-text-align: center;
-}
+
 
 p {
 padding: 0;
 }
 nav{
     background-color: #333;
-    padding: 0px;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
-main{
-max-width: 20rem;
-}
 
 h1 {
 color: black;
+border-bottom: #333;
+}
+
+.grid,header,footer{
+max-width: 840px;
+margin: 0 auto;
+
+}
+.grid{
+display: grid;
+align-items: center;
+
+}
+main{
+grid-column: 2/3;
+margin: 1rem;
+
+}
+
+aside{
+width: 20rem;
+position: relative;
+grid-column: 1/2;
+grid-row: 1/2;
+
+
 }
