--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -72,7 +72,7 @@ header nav a {
     color: var(--highlight-color);
     font-family: var(--heading-font);
     font-size: 2rem;
-}
+} 
 
 .hero article {
     position: absolute;
@@ -92,6 +92,14 @@ header nav a {
     width: 120px;
     border-radius: 6px;
     border: 2px solid var(--accent2-color);
+}
+
+.hero article img{
+float: right;
+margin-left: 1rem;
+margin-bottom: 1rem;
+
+
 }
 
 /* HISTORY SECTION GRID */
